<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lugar_nuevo_marcador"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_gravity="center"/>


            <Spinner
                android:id="@+id/spinner_facultad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piso_nuevo_marcador"
                android:textSize="18sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_gravity="center"/>


            <Spinner
                android:id="@+id/spinner_piso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Base.TextAppearance.AppCompat" />





        </LinearLayout>


        <EditText
            android:id="@+id/Edittxt_nombre_ubicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:cursorVisible="true"
            android:ems="10"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/nombre_nuevo_marcador"
            android:theme="@style/AppTheme"
            android:textAlignment="center" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>