<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto">


    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        map:cameraTargetLat="-31.641007348556727"
        map:cameraTargetLng="-60.67320674657822" />


    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_alignParentBottom="true"
        fab:fab_colorNormal="@color/colorPrimaryDark"
        fab:fab_colorPressed="@color/colorAccent"
        fab:fab_colorRipple="@color/blanco"
        fab:fab_showShadow="true"
        fab:fab_shadowColor="#66000000"
        fab:fab_shadowRadius="4dp"
        fab:fab_shadowXOffset="1dp"
        fab:fab_shadowYOffset="3dp"
        fab:fab_size="normal"
        android:src="@drawable/ic_youtube_searched_for_white_24dp"/>


    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="4dp"
        android:layout_above="@id/fab"
        fab:fab_colorNormal="@color/colorPrimaryDark"
        fab:fab_colorPressed="@color/colorAccent"
        fab:fab_colorRipple="@color/blanco"
        fab:fab_showShadow="true"
        fab:fab_shadowColor="#66000000"
        fab:fab_shadowRadius="4dp"
        fab:fab_shadowXOffset="1dp"
        fab:fab_shadowYOffset="3dp"
        fab:fab_size="normal"
        android:src="@drawable/ic_add_location_white_24dp"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/fab"
        android:layout_alignParentBottom="true"
        fab:menu_fab_size="normal"
        fab:menu_showShadow="true"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_colorNormal="#DA4336"
        fab:menu_colorPressed="#E75043"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_animationDelayPerItem="50"
        fab:menu_buttonSpacing="0dp"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_paddingRight="4dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="right"
        fab:menu_openDirection="up"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_icon="@drawable/ic_layers_white_24dp">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_piso_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_label="@string/planta_baja"
            fab:fab_colorNormal="#DA4336"
            fab:fab_colorPressed="#E75043"
            fab:fab_colorRipple="#99FFFFFF"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_piso_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_label="@string/primer_piso"
            fab:fab_colorNormal="#DA4336"
            fab:fab_colorPressed="#E75043"
            fab:fab_colorRipple="#99FFFFFF"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_piso_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_label="@string/segundo_piso"
            fab:fab_colorNormal="#DA4336"
            fab:fab_colorPressed="#E75043"
            fab:fab_colorRipple="#99FFFFFF"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_piso_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_label="@string/tercer_piso"
            fab:fab_colorNormal="#DA4336"
            fab:fab_colorPressed="#E75043"
            fab:fab_colorRipple="#99FFFFFF"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_piso_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_label="@string/cuarto_piso"
            fab:fab_colorNormal="#DA4336"
            fab:fab_colorPressed="#E75043"
            fab:fab_colorRipple="#99FFFFFF"/>

    </com.github.clans.fab.FloatingActionMenu>



</RelativeLayout>


